fixed overflow issue

--- a/src/Components/List/List.module.scss
+++ b/src/Components/List/List.module.scss
@@ -16,7 +16,7 @@
     align-items: center;
     box-sizing: border-box;
     overflow: auto;
-    overflow-x: scroll;
+    overflow-x: auto;
     &>div:not(:first-child) {
         margin-left: -130px;
     }
